<resources>
    <string name="app_name">高县饮水安全信息系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_production_process">生产过程</string>
    <string name="tab_add_medicine">加氯加药</string>
    <string name="tab_water_quality">水质信息</string>
    <string name="tab_map_info">地理信息</string>

    <!-- Test activity -->
    <string name="settings_activate">Activate magnifying</string>
    <string name="settings_scale">Scale</string>
    <string name="settings_radius">Radius</string>
    <string name="settings_border_width">Border width</string>
    <string name="settings_border_color">Border color</string>
    <string name="settings_offset_x">Offset X</string>
    <string name="settings_offset_y">Offset Y</string>

    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
		62 ： 扫描整合定位依据失败。此时定位结果无效。\n
		63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
		65 ： 定位缓存的结果。\n
		66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
		67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
		68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
		161： 表示网络定位结果\n
		162~167： 服务端定位失败\n
		502：key参数错误\n
		505：key不存在或者非法\n
		601：key服务被开发者自己禁用\n
		602：key mcode不匹配\n
		501～700：key验证失败\n</string>
    <string name="qa_callback">问题反馈方法</string>
    <string name="qa_callback_mail">mapapi@baidu.com</string>
    <string name="demo_name_basemap">基本地图功能</string>
    <string name="demo_title_basemap">基本地图功能--BaseMapDemo</string>
    <string name="demo_desc_basemap">创建一张百度地图并管理地图的生命周期</string>
    <string name="demo_name_map_fragment">基于MapFragment的基本地图</string>
    <string name="demo_title_map_fragment">MapFragment使用--MapFragmentDemo</string>
    <string name="demo_desc_map_fragment">创建一个基于Fragment的地图框架</string>
    <string name="demo_name_multimap">多地图展示</string>
    <string name="demo_title_multimap">多地图展示--MultiMapViewDemo</string>
    <string name="demo_desc_multimap">在一个Activity中创建多个地图展示</string>
    <string name="demo_name_layers">图层展示</string>
    <string name="demo_title_layers">图层展示--LayersDemo</string>
    <string name="demo_desc_layers">展示普通图、卫星图、交通流量图及百度城市热力图</string>
    <string name="demo_name_control">地图操作功能</string>
    <string name="demo_desc_control">介绍地图基本控制方法</string>
    <string name="demo_title_control">地图操作功能--MapControlDemo</string>
    <string name="demo_name_ui">UI控制功能</string>
    <string name="demo_title_ui">UI控制功能--UISettingsDemo</string>
    <string name="demo_desc_ui">介绍开关手势功能和显示隐藏UI控件</string>
    <string name="demo_name_location">定位图层展示</string>
    <string name="demo_title_location">定位图层展示--LocationDemo</string>
    <string name="demo_desc_location">介绍定位图层的基本用法</string>
    <string name="demo_name_geometry">自定义绘制功能</string>
    <string name="demo_title_geometry">自定义绘制功能--GeometryDemo</string>
    <string name="demo_desc_geometry">介绍自定义绘制点、线、多边形、圆等几何图形和文字</string>
    <string name="demo_name_favorite">点收藏功能</string>
    <string name="demo_title_favorite">点收藏功能--FavoriteDemo</string>
    <string name="demo_desc_favorite">介绍如何创建、管理本地点数据</string>
    <string name="demo_name_radar">周边雷达功能</string>
    <string name="demo_title_radar">周边雷达功能--RadarDemo</string>
    <string name="demo_desc_radar">介绍如何使用周边雷达功能上传位置、检索周边的人</string>
    <string name="demo_name_overlay">覆盖物功能</string>
    <string name="demo_title_overlay">覆盖物功能--OverlayDemo</string>
    <string name="demo_desc_overlay">介绍添加覆盖物并响应点击功能和弹出pop功能</string>
    <string name="demo_name_poi">POI搜索功能</string>
    <string name="demo_title_poi">POI搜索功能--POISearchDemo</string>
    <string name="demo_desc_poi">介绍关键词查询、suggestion查询和查看餐饮类Place详情页功能</string>
    <string name="demo_name_route">路径规划功能</string>
    <string name="demo_title_route">路径规划功能--RoutePlanDemo</string>
    <string name="demo_desc_route">介绍公交、驾车和步行三种线路规划方法和自设路线方法</string>
    <string name="demo_name_geocode">地理编码功能</string>
    <string name="demo_title_geocode">地理编码功能--GeoCodeDemo</string>
    <string name="demo_desc_geocode">介绍地址信息与坐标之间的相互转换</string>
    <string name="demo_name_bus">公交线路查询功能</string>
    <string name="demo_title_bus">公交线路查询功能--BusLineDemo</string>
    <string name="demo_desc_bus">介绍查询公交线路功能</string>
    <string name="demo_name_offline">离线地图功能</string>
    <string name="demo_title_offline">离线地图功能--OfflineDemo</string>
    <string name="demo_desc_offline">介绍如何下载和使用离线地图</string>
    <string name="demo_name_open_baidumap">调启百度地图</string>
    <string name="demo_title_open_baidumap">调启百度地图--OpenBaiduMap</string>
    <string name="demo_desc_open_baidumap">介绍如何调启百度地图实现自身业务功能</string>
    <string name="demo_name_cloud">LBS.云检索功能</string>
    <string name="demo_title_cloud">LBS.云检索功能--CloudSearchDemo</string>
    <string name="demo_desc_cloud">介绍如何使用LBS.云检索用户自有数据</string>
    <string name="demo_name_heatmap">热力图功能</string>
    <string name="demo_title_heatmap">热力图功能--HeatMapDemo</string>
    <string name="demo_desc_heatmap">介绍如何以热力图形式显示用户自有数据</string>
    <string name="demo_name_opengl">OpenGL绘制功能</string>
    <string name="demo_title_opengl">OpenGL绘制功能--OpenGLDemo</string>
    <string name="demo_desc_opengl">介绍如何使用OpenGL绘制在地图中进行绘制</string>
    <string name="key_error">"请在  DemoApplication.java文件输入正确的授权Key！\r\n申请地址：http://dev.baidu.com/wiki/static/imap/key/"</string>
    <string name="navi_tip">百度地图SDK支持通过相关的接口，调启百度地图客户端（v5.0以上）导航和Web端百度地图导航。</string>
    <string name="title_activity_cloud_search_demo">云检索使用介绍</string>
    <string name="cloud_search_tips"> \t\tLBS.云是百度地图针对LBS开发者推出的平台级服务。结合已有的地图API和SDK服务。通过开放服务端存储和计算能力,提供海量位置数据存储、检索、展示一体化解决方案。\n\n
          \t\t该服务对开发者免费开放。测试demo里写入了测试的ak。开发者可以使用测试ak查看 LBS.云检索的效果。如果开发者要使用自己的数据，请在申请ak后替换demo中的ak。\n\n
          \t\t如有任何关于LBS.云服务的问题,诸如如何申请ak、如何存储和检索数据等，请访问百度地图官方“LBS开放平台”。地址：http://lbsyun.baidu.com/  \n
</string>
    <string name="panorama_tips">\t\t百度地图SDK为您免费提供全景图的功能。\n
      \t\t利用接口，可查询、开启并操作更丰富的全景图。\n
      \t\t以下三个示例分别向您展示了三种调启全景图的入口，您可在实际操作中灵活运用。\n
      \t\t全景图还提供了Item绘制能力，您可在第三个示例中查看具体使用方法。</string>
    <string name="panorama_poi_tips"> 首先根据关键词进行POI检索，点击地图上的POI点，根据POI的UID进入全景</string>
    <string name="panorama_geo_tips">单击地图以选取坐标点</string>
    <string name="demo_title_share">短串分享功能 --ShareDemo</string>
    <string name="demo_name_share">短串分享</string>
    <string name="demo_desc_share">介绍关键词查询、suggestion查询和查看餐饮类Place详情页功能</string>
    <string name="share_tip">\t\t短串分享是指，用户搜索查询后得到的每一个地理位置结果将会对应一条短串（短链接），用户可以通过短信、邮件或第三方分享组件（如微博、微信等）把短串分享给其他用户从而实现地理位置信息的分享。当其他用户收到分享的短串后，点击短串即可打开手机上的百度地图客户端或者手机浏览器进行查看。\n\n
                \t\t例如，用户搜索“百度大厦”后通过短信使用短串分享功能把该地点分享给好友，好友点击短信中的短串“http://j.map.baidu.com/XLCrk”后可以调起百度地图客户端或者手机浏览器查看“百度大厦”的地理位置信息。\n\n
                \t\t目前短串分享功能暂时开放了“POI搜索结果分享”和“反向地理编码结果分享”，日后会开放更多的功能，欢迎广大开发者使用短
</string>
    <string name="title_activity_panorama_activity_main">全景图功能</string>
    <string name="title_activity_panorama_poi_selector">通过POI进入全景图</string>
    <string name="title_activity_panorama_geo_selector">通过地理坐标进入全景图</string>
    <string name="title_activity_panorama_demo">全景图功能</string>
    <string name="title_activity_test_interface">Test_interface</string>
    <string name="c_water_level_str">出厂水水质综合评定：</string>
    <string name="j_water_level_str">进厂水水质综合评定：</string>





    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
</resources>
