<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layout0"
        style="@style/home_bottom_bar_container">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv0"
                style="@style/home_bottom_bar_iv"
                android:alpha="1"
                android:src="@drawable/produceprocess_default" />

            <ImageView
                android:id="@+id/iv0_selected"
                style="@style/home_bottom_bar_iv"
                android:alpha="0"
                android:src="@drawable/produceprocess_selected" />
           </FrameLayout>

        <TextView
            android:id="@+id/tv0"
            style="@style/home_bottom_bar_tv"
            android:text="@string/tab_production_process" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        style="@style/home_bottom_bar_container">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv1"
                style="@style/home_bottom_bar_iv"
                android:alpha="1"
                android:src="@drawable/addmedicine_default" />

            <ImageView
                android:id="@+id/iv1_selected"
                style="@style/home_bottom_bar_iv"
                android:alpha="0"
                android:src="@drawable/addmedicine_selected" />
           </FrameLayout>

        <TextView
            android:id="@+id/tv1"
            style="@style/home_bottom_bar_tv"
            android:text="@string/tab_add_medicine" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        style="@style/home_bottom_bar_container">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv2"
                style="@style/home_bottom_bar_iv"
                android:alpha="1"
                android:src="@drawable/wq_default" />

            <ImageView
                android:id="@+id/iv2_selected"
                style="@style/home_bottom_bar_iv"
                android:alpha="0"
                android:src="@drawable/wq_selected" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv2"
            style="@style/home_bottom_bar_tv"
            android:text="@string/tab_water_quality" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        style="@style/home_bottom_bar_container">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv3"
                style="@style/home_bottom_bar_iv"
                android:alpha="1"
                android:src="@drawable/map_default" />

            <ImageView
                android:id="@+id/iv3_selected"
                style="@style/home_bottom_bar_iv"
                android:alpha="0"
                android:src="@drawable/map_selected" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv3"
            style="@style/home_bottom_bar_tv"
            android:text="@string/tab_map_info" />

    </LinearLayout>
</LinearLayout>