<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MagnifyingViewSettingsActivity" >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/fake_action_bar" />

        <!-- Activation setting -->

        <LinearLayout
            android:id="@+id/settings_activate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/settings_item_background"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/settings_activate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:background="@color/settings_separator" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" >

                <CheckBox
                    android:id="@+id/settings_activate_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:duplicateParentState="false" />
            </FrameLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/settings_separator" />

        <!-- Scale setting -->

        <LinearLayout
            android:id="@+id/settings_scale"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/settings_item_background"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/settings_scale"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:background="@color/settings_separator" />

            <EditText
                android:id="@+id/settings_scale_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:textColor="@color/text_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/settings_separator" />

        <!-- Radius setting -->

        <LinearLayout
            android:id="@+id/settings_radius"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/settings_item_background"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/settings_radius"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:background="@color/settings_separator" />

            <EditText
                android:id="@+id/settings_radius_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/text_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/settings_separator" />

        <!-- Border width setting -->

        <LinearLayout
            android:id="@+id/settings_border_width"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/settings_item_background"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/settings_border_width"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:background="@color/settings_separator" />

            <EditText
                android:id="@+id/settings_border_width_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/text_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/settings_separator" />

        <!-- Border color setting -->

        <LinearLayout
            android:id="@+id/settings_border_color"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/settings_item_background"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/settings_border_color"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:background="@color/settings_separator" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" >

                <View
                    android:id="@+id/settings_border_color_value"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:background="@color/fab_separator" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_border_color_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            tools:ignore="UnusedAttribute" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" >

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:background="@color/red" />

                <SeekBar
                    android:id="@+id/settings_border_color_red"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:max="255" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" >

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:background="@color/green" />

                <SeekBar
                    android:id="@+id/settings_border_color_green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:max="255" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" >

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:background="@color/blue" />

                <SeekBar
                    android:id="@+id/settings_border_color_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:max="255" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" >

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:background="@drawable/alpha_background" />

                <SeekBar
                    android:id="@+id/settings_border_color_alpha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:max="255" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/settings_separator" />

        <!-- Offset setting X -->

        <LinearLayout
            android:id="@+id/settings_offset_x"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/settings_item_background"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/settings_offset_x"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:background="@color/settings_separator" />

            <EditText
                android:id="@+id/settings_offset_x_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/text_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/settings_separator" />

        <!-- Offset setting X -->

        <LinearLayout
            android:id="@+id/settings_offset_y"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/settings_item_background"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/settings_offset_y"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:background="@color/settings_separator" />

            <EditText
                android:id="@+id/settings_offset_y_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/text_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/settings_separator" />
    </LinearLayout>

</ScrollView>